#139: add min-height for product-thumbnail to prevent collapse in case of missing image

--- a/input/assets/css/_shop-item.scss
+++ b/input/assets/css/_shop-item.scss
@@ -14,6 +14,7 @@
   .pop-product-image {
     margin: 0 auto 10px;
     display: block;
+    min-height: 200px;
   }
   .pop-product-name {
     margin-top: 15px;
